Even more javadocs and some fixes (removed unused vars and method parameters)